kubernetes/apps/photos/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: photos
  annotations:
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - photos.tituslab.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
